* Sat Aug 25 2007 Jesse Keating <jkeating@redhat.com>
- Use a kickstart file as input now (for cdsize and package manifest)
- Turn pkglist into a pre-parsed package dictionary
- Arrange config setting logically
- Error out on usage if no config file passed

* Fri Aug 24 2007 Jesse Keating <jkeating@redhat.com>
- Remove a lot of configurable items and hard set them
- Move some items to cli flags only (part of moving to pykickstart)
- make "product_name" "name" instead.  KISS
- hard set product_path to 'Packages'
- Use group metadata from repos instead of our own comps file
- Get group files out of configured repos and create a mashup
  of the comps.  Filter it and make use of it when creating repos.
- Move _doRunCommand into pypungi/__init__.py so that it can be
  easily used by all modules.  Also pass in a logger for correct
  logging
- Quiet down creatrepo calls

* Thu Aug 23 2007 Jesse Keating <jkeating@redhat.com>
- Add a source config for the Fedora spin

* Tue Aug 21 2007 Jesse Keating <jkeating@redhat.com>
- Rework how source rpms are pulled in
  Always pull in 'src' arch packages, just filter them
  when not needed.  Saves having to reset or create new
  yum objects.

* Wed Aug 15 2007 Jesse Keating <jkeating@redhat.com>
- Create a base pungi class that sets logging
- Inherit this class in Gather and Pungi
- Adjust logging to make use of new facility, use right levels
- Drop a note when all done with composing

* Wed Aug 08 2007 Jesse Keating <jkeating@redhat.com>
- Make Gather() no longer a subclass of yum
- We set debuglevel when creating the yum object.
- Be verbose about what we clean
- Create a subclass of yum to work around logging fun

* Wed Aug 01 2007 Jesse Keating <jkeating@redhat.com>
- Create a new yum object for source downloads as yum

* Sat Jul 28 2007 Jesse Keating <jkeating@redhat.com>
- Split the createrepo call into it's own function
- When raising an error, print the error too.

* Tue Jul 24 2007 Jesse Keating <jkeating@redhat.com>